asset/sass/_screen.scss
/* ... */
button,
.button,
input[type="submit"] {
    background-color: $gray;
    color: $dark-gray;
    border: 0;
    cursor: pointer;
    padding: $spacing-s;
    min-height: 1.5 * $spacing-l;
    min-width: 1.5 * $spacing-l;
    line-height: $base-line-height;
    text-align: center;
}

a.button {
    color: #000;
    display: inline-block;

    &:hover {
        text-decoration: none;
    }
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
input[type="number"],
input[type="date"],
input[type="datetime-local"] {
    border: 1px solid $gray;
    padding: $spacing-s - 1px;
    height: 1.5 * $base-line-height;
}

textarea {
    border: 1px solid $gray;
    padding: $spacing-s - 1px;
}

.field {
    margin-bottom: $spacing-l;
    display: flex;
    flex-wrap: wrap;
}

.field .field-meta {
    width: 25%;
    padding-right: $spacing-l;
    text-align: right;
    line-height: 1.5 * $base-line-height;
}

.field-description {
    margin-bottom: $spacing-s;
}

.required.field .field-meta:after {
    content: "*";
}

.field .field-meta legend {
    float: right;
}

.field .inputs {
    width: 75%;
    padding-left: $spacing-l;
}

.field .collapsible {
    font-size: .75 * $base-font-size;
    display: block;
    clear: both;
    line-height: .75 * $base-line-height;
}

.field .inputs ~ *,
form input[type="submit"] {
    margin-left: calc(25% + #{$spacing-l});
    margin-top: $spacing-m;
}

#advanced-search .value:not(:first-child) {
    margin-top: $spacing-s;
}

#advanced-search {
    padding: $spacing-l 0;
}

#advanced-search input[type="text"] {
    height: 1.5 * $base-line-height;
}

#advanced-search input[type="submit"] {
    font-size: 1.25 * $base-font-size;
    padding: $spacing-m;
}

#advanced-search .multi-value div.value:only-of-type .remove-value {
    display: none;
}

#advanced-search .remove-value {
    text-indent: -9999px;
    position: relative;
    width: 1.5 * $spacing-l;
    height: 1.5 * $spacing-l;
    margin-left: $spacing-s;

    &:before {
        text-indent: 0;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        line-height: 1.5 * $base-line-height;
    }
}

.search-entry:not(:first-child) {
    margin-top: $spacing-m;
}

/* @end */

/* @group ----- Navigation ----- */

nav .navigation,
nav ul {
    @include de-list;
}

.item-pagination.navigation {
    border-top: 1px solid $gray;
    padding-top: $spacing-m - 1px;
    display: flex;
    justify-content: space-between;
}

.secondary-nav {
    text-align: center;
}

.secondary-nav ul {
    margin: 0 0 -1px;
    border-bottom: 1px solid $gray;
    padding-bottom: -1px;
}

.secondary-nav.navigation li {
    display: inline-block;
    margin-right: .5em;
    padding-bottom: $spacing-m;

    &.active a {
        color: $red;
    }
}

.secondary-nav a {
    color: $dark-gray;
}

#skipnav {
  position: fixed;
  top: $spacing-l;
  left: 50%;
  border: 1px solid $gray;
  transform: translateX(-50%);
  z-index: -5;
  padding: $spacing-s;
  background-color: #fff;
  opacity: 0;
  
  &:focus {
    z-index: 1000;
    opacity: 1;
  }
}

/* @end */

/* @group ----- Header ----- */

#skipnav {
    position: absolute;
    top: 0;
    left: -9999px;
    background-color: #fff;
    padding: $spacing-s;
    display: inline-block;

    &:focus {
        left: 50%;
        transform: translateX(-50%);
    }
}

header nav .navigation {
    position: relative;
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    border-top: 1px solid $gray;
    border-bottom: 1px solid $gray;
    padding: 0;
    margin: $spacing-l 0;
}

header nav li {
    display: block;
    margin: 0 .5em;
}

header nav a {
    font-size: .875 * $base-font-size;
}

.site-title {
    font-size: 1.5 * $base-font-size;
    text-transform: uppercase;
    letter-spacing: .125em;
    margin: (2 * $spacing-l) 0 0;
    display: block;
    text-align: center;

    &:hover {
        text-decoration: none;
    }
}

.site-title img {
    max-height: (3 * $spacing-l);
    max-width: 100%;
}

.banner {
    position: relative;
    display: flex;
    align-items: center;
    overflow: hidden;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
}

.banner img {
    width: 100%;
}

#search-container {
    position: absolute;
    top: -(2 * $spacing-l);
    right: $spacing-l;
}

#search-container input[type="text"],
#search-container button {
    border: 0;
    border-bottom: 1px solid $gray;
    background-color: #fff;
    height: 1.5 * $base-line-height;
    display: inline-block;
    line-height: $base-line-height;
    padding: $spacing-s;
    vertical-align: bottom;
    background-color: #fff;
    color: $dark-gray;
}

#search-form {
    display: flex;
    padding: $spacing-s $spacing-m $spacing-m;
    box-shadow: 0 0 0 1px #dedede inset;
    background: #fff;
}

#search-form.closed {
    width: 1.5 * $base-line-height;
    height: 1.75 * $base-line-height;
}

#search-form.open {
    right: 1.5 * $base-line-height;
    position: absolute;
}

#search-form + button.search-toggle {
    bottom: 0;
    position: absolute;
    width: 1.5 * $base-line-height;
    height: 1.5 * $base-line-height;
    border-bottom: 0;
    color: darken($gray, 15%);
}

#search-form.closed + .search-toggle {
    right: 0;
    border: 1px solid $gray;
    border-top: 0;

    &:after {
        content: "\f002";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
    }
}

#search-form.open + .search-toggle {
    top: $spacing-s;
    right: 0;

    &:after {
        content: "\f00d";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
    }
}

#search-form.closed [type="text"],
#search-form.closed [type="submit"],
#search-form.closed #advanced-form {
    display: none;
}
/* ... */

